# KMEANS

shared/: CMakeCache.txt  CMakeLists.txt  DataStructs.h  LoadData.h  Makefile  cmake_install.cmake  test  test.c
static/: CMakeCache.txt  CMakeLists.txt  DataStructs.h  ErrorHandle.h  LoadData.h  Makefile  ParseFile.h  ProcessFile.h  cmake_install.cmake  test  test.c  test.txt
